deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar-faucet
  labels:
    app: foobar-faucet
spec:
  selector:
    matchLabels:
      app: foobar-faucet
  template:
    metadata:
      labels:
        app: foobar-faucet
        tier: web
    spec:
      containers:
      - name: foobar-faucet
        image: gcr.io/proton-wallet/foobar-faucet@sha256:9dfc96eb855eedea5a9913dc4abd7a6323cde6ced57c75b969a5d46d63627d66
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: foobar-faucet-backend
  labels:
    app: foobar-faucet
spec:
  type: NodePort
  selector:
    app: foobar-faucet
    tier: web
  ports:
  - port: 3000
    targetPort: 8080
